--- a/src/layout/header/Header.module.scss
+++ b/src/layout/header/Header.module.scss
@@ -13,10 +13,13 @@
 		@apply flex gap-5 items-center;
 
 		> .favorite {
-			@apply size-7;
+			@apply relative size-7;
 
 			> svg {
 				@apply w-full h-full;
+			}
+			> .favoriteCount {
+				@apply absolute right-[-5px] top-[-5px] w-5 content-center text-center leading-4 bg-whiskySour text-white aspect-square rounded-full text-[12px];
 			}
 		}
 	}
