--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -36,5 +36,9 @@
 		> .btn {
 			@apply w-[95%] h-11 mt-1 mx-auto flex items-center justify-center gap-2 py-[2px] text-lg font-semibold text-white bg-whiskySour;
 		}
+
+		> .disabledBtn {
+			@apply text-xl text-center text-red-500 font-medium;
+		}
 	}
 }
