--- a/src/pages/cardDetail/CardDetailPage.module.scss
+++ b/src/pages/cardDetail/CardDetailPage.module.scss
@@ -32,9 +32,6 @@
 					> .name {
 						@apply max-w-[50%] text-2xl font-bold;
 					}
-
-					> .rating {
-					}
 				}
 			}
 
@@ -78,6 +75,10 @@
 
 				> .btn {
 					@apply w-auto px-10 h-[50px] mt-1 flex items-center justify-center gap-2 py-[2px] text-lg font-semibold text-white bg-whiskySour;
+
+					&:disabled {
+						@apply bg-gray-400;
+					}
 				}
 			}
 		}
