--- a/src/pages/cardDetail/CardDetailPage.module.scss
+++ b/src/pages/cardDetail/CardDetailPage.module.scss
@@ -1,5 +1,5 @@
 .cardDetail {
-	@apply mt-5 w-full h-[750px] grid grid-cols-2  gap-7;
+	@apply mt-5 w-full 2xl:h-[750px] grid lg:grid-cols-[60%_1fr] xl:grid-cols-2 gap-7;
 
 	> .gallery {
 		@apply w-full h-full grid grid-rows-images gap-4;
@@ -27,20 +27,20 @@
 				@apply flex items-end justify-between;
 
 				> .container {
-					@apply flex items-end gap-5;
+					@apply flex flex-col sm:flex-row sm:items-end lg:flex-col lg:items-start xl:flex-row xl:items-end gap-3 sm:gap-5;
 
 					> .name {
-						@apply max-w-[50%] text-2xl font-bold;
+						@apply sm:max-w-[50%] w-full text-base sm:text-lg md:text-2xl font-bold;
 					}
 				}
 			}
 
 			> .inStockTrue {
-				@apply text-base font-medium text-[#24ad53];
+				@apply text-xs sm:text-sm md:text-base font-medium text-[#24ad53];
 			}
 
 			> .inStockFalse {
-				@apply text-base font-medium text-[#e7401b];
+				@apply text-xs sm:text-sm md:text-base font-medium text-[#e7401b];
 			}
 		}
 
@@ -51,7 +51,7 @@
 				@apply flex flex-col gap-4;
 
 				> .item {
-					@apply grid grid-cols-[30%_1fr] items-start gap-5 text-lg font-medium;
+					@apply grid grid-cols-[30%_1fr] items-start gap-5 text-sm sm:text-base md:text-lg font-medium;
 
 					> .itemTitle {
 					}
@@ -64,17 +64,17 @@
 		}
 
 		> .bottomContent {
-			@apply mt-7;
+			@apply mt-3 md:mt-7;
 
 			> .price {
-				@apply text-3xl font-bold;
+				@apply text-xl sm:text-2xl md:text-3xl font-bold;
 			}
 
 			> .bottomContainer {
-				@apply mt-7 flex items-center gap-[100px];
+				@apply mt-3 md:mt-7;
 
 				> .btn {
-					@apply w-auto px-10 h-[50px] mt-1 flex items-center justify-center gap-2 py-[2px] text-lg font-semibold text-white bg-whiskySour;
+					@apply w-auto px-10 h-8 md:h-[50px] mt-1 flex items-center justify-center gap-2 py-[2px] text-sm md:text-lg font-semibold text-white bg-whiskySour;
 
 					&:disabled {
 						@apply bg-gray-400;
@@ -85,10 +85,10 @@
 	}
 }
 .desc {
-	@apply my-[100px] w-full h-auto p-7 shadow-card;
+	@apply my-6 2xl:my-14 w-full h-auto p-7 shadow-card;
 
 	> .descTitle {
-		@apply inline-block relative after:content-[""] text-xl font-bold;
+		@apply inline-block relative after:content-[""] text-base sm:text-lg md:text-xl font-bold;
 
 		&::after {
 			@apply absolute bottom-[-5px] left-0 w-full h-[2px] bg-whiskySour;
@@ -96,6 +96,6 @@
 	}
 
 	> .descText {
-		@apply mt-5 text-lg font-medium;
+		@apply mt-3 md:mt-5 text-sm sm:text-base md:text-lg font-medium;
 	}
 }
