Главная страница закончена и форма заказа

--- a/src/pages/orderPage/OrderPage.module.scss
+++ b/src/pages/orderPage/OrderPage.module.scss
@@ -1,11 +1,7 @@
 .order {
-	@apply flex;
+	@apply mt-5;
 
-	> .form {
-		@apply mt-5 flex flex-col gap-3;
-
-		> .btn {
-			@apply w-[350px] py-1 text-center bg-[#141414] text-white rounded-[3px];
-		}
+	> .title {
+		@apply ml-10 text-3xl italic text-whiskySour font-medium tracking-[2px];
 	}
 }
