--- a/src/pages/cartPage/CartPage.module.scss
+++ b/src/pages/cartPage/CartPage.module.scss
@@ -43,18 +43,19 @@
 }
 
 .total {
-	@apply mt-5 sm:mt-10 sm:w-[300px] w-[220px] flex  justify-between gap-5 sm:text-lg text-base;
+	@apply mt-5 sm:mt-10 sm:w-[420px] w-[220px] flex  justify-between gap-5 sm:text-xl text-base;
 
 	> .totalDesc {
 		@apply font-semibold;
 	}
 
 	> .totalPrice {
+		@apply italic tracking-wider;
 	}
 }
 
 .orderBtn {
-	@apply mt-5 sm:w-[300px] w-[220px] h-auto py-1 text-center bg-[#141414] text-white rounded-[3px] sm:text-base text-xs;
+	@apply mt-7 sm:w-[420px] w-[220px] h-auto py-1 text-center bg-whiskySour hover:shadow-btnHover transition-all duration-300 text-white rounded-[3px] sm:text-base text-xs;
 }
 
 .disabledOrderBtn {
